# lua---opencv

./: CMakeLists.txt  README.md  README.txt  init.lua  opencv-1.0-1.rockspec  opencv.c  opencv_backcomp.cpp  opencv_backcomp.hpp
generic/: opencv.c
test/: test_essential.lua  test_vid.lua
